--- a/CS601_HW2_Jones/styles/style.css
+++ b/CS601_HW2_Jones/styles/style.css
@@ -1,11 +1,15 @@
-
+/*Site Wide*/
+* {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
+}
 
 /*NAVIGATION BAR*/
 .navbar {
   text-align: center;
   background-color: #064F40; /*set the background color*/
   width: 100%; /*make the nav full screen width*/
-  height: 40px;
+  height: 80px;
   margin: 0 auto;
   display: grid; /*using css grid layout*/
   grid-template-columns: 1fr auto 1fr; /*create 3 columns with grid*/
@@ -18,6 +22,7 @@
 
 #navbar__menu { /*I thought about combining this with navbar__link but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 3; /*positioning on the right*/
+  padding-top: 35px;
 }
 
 /*NAVBAR STYLING*/
@@ -26,11 +31,34 @@
   text-decoration: none; /*get rid of default blue link underline*/
   text-transform: uppercase;
   color: white;
+  font-size: 40px;
+  padding-top: 20px;
+  font-family: 'Raleway';
 }
 
 /*This is navbar menu items*/
 .navbar__link {
   text-decoration: none; /*get rid of default blue link underline*/
   text-transform: uppercase;
-  color: #B2A59F;
+  color: #d0bcb3; /*#B2A59F*/
+  padding-left: 5px;
+}
+
+/*MUSIC STYLING*/
+/*this will hopefully change a lot once we introduce javascript and i can make custom controls*/
+.music {
+  border: 2px solid black;
+  border-radius: 33px;
+  background-color: #eee;
+}
+
+.intro {
+  background-image: url("../images/wolftree.jpeg");
+  background-size: cover;
+  height: 600px;
+}
+
+.intro__img {
+  border: 2px solid black;
+  width: 100%;
 }
