--- a/CS601_HW2_Jones/styles/style.css
+++ b/CS601_HW2_Jones/styles/style.css
@@ -4,6 +4,7 @@
   font-family: 'Raleway', sans-serif;
 }
 
+/*---------------------------------------------------*/
 /*NAVIGATION BAR*/
 .navbar {
   text-align: center;
@@ -22,20 +23,17 @@
   grid-row: 1;
   padding-top: 30px;
 }
-
 #navbar__grid--menu{
   grid-column: 2; /*positioning centered*/
   grid-row: 2;
   padding-top: 10px;
 }
-
 #navbar__grid--right { /*I thought about combining this with navbar__link but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 3; /*positioning on the right*/
   padding: 15px;
   text-align: right;
 }
 
-/*NAVBAR STYLING*/
 /*This is navbar menu items*/
 .navbar__title {
   text-decoration: none; /*get rid of default blue link underline*/
@@ -44,7 +42,6 @@
   font-size: 40px;
   font-family: 'Raleway';
 }
-
 /*This is navbar menu items*/
 .navbar__link {
   text-decoration: none; /*get rid of default blue link underline*/
@@ -53,24 +50,29 @@
   font-size: 15px;
   padding: 15px;
 }
-
 /*This is navbar social icons*/
 .navbar__social {
   width: 30px;
   height: 30px;
 }
 
+/*---------------------------------------------------*/
+/*COMMON STYLES THROUGHOUT*/
 h1 {
 font-family: 'Alegreya Sans';
 font-size: 60px;
 color: white;
 text-align: center;
-margin: 0 !important;
 }
 
 p {
 color: white;
 text-align: center;
+}
+
+.hours, td, tr{
+  text-align: center;
+  margin: 0 auto;
 }
 
 /*BUTTON STYLING*/
@@ -86,8 +88,7 @@ text-align: center;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #1e6053;
   align-items: center;
-
-  text-align: center; /*intro full screen width*/
+  text-align: center;
 }
 .button:hover {
 	background-color:#043f33;
@@ -96,16 +97,8 @@ text-align: center;
 	position:relative;
 	top:1px;
 }
-
-/*MUSIC STYLING*/
-/*this will hopefully change a lot once we introduce javascript and i can make custom controls*/
-.music {
-  border: 2px solid black;
-  border-radius: 33px;
-  background-color: #f1f3f4;
-}
-
-/*MUSIC STYLING*/
+/*---------------------------------------------------*/
+/*MAIN INTRO PAGE STYLING*/
 .intro {
   background-image: url("../images/ice.jpeg");
   background-size: cover;
@@ -117,7 +110,7 @@ text-align: center;
   display: grid; /*using css grid layout*/
   grid-template-columns: 1fr auto 1fr; /*create 3 column with grid*/
   grid-template-rows: 1fr 1fr 1fr 1fr; /*create 4 rows*/
-    }
+  }
 
   #intro__grid--top {
     grid-row: 2; /*positioning top row*/
@@ -128,6 +121,35 @@ text-align: center;
     grid-column: 2; /*positioning center column*/
   }
 
+  /*---------------------------------------------------*/
+  /*MUSIC STYLING*/
+  /*this will hopefully change a lot once we introduce javascript and i can make custom controls*/
+  .music {
+    border: 2px solid black;
+    border-radius: 33px;
+    background-color: #f1f3f4;
+  }
+
+  /*---------------------------------------------------*/
+  /*FIND US STYLING*/
+  .findUs {
+    text-align: center;
+    margin: 0;
+    display: grid; /*using css grid layout*/
+    grid-template-columns: 1fr 1fr; /*create 1 column with grid*/
+    grid-template-rows: 1fr 1fr; /*create 4 rows*/
+    }
+
+    #findUs__grid--left {
+      grid-row: 1/3; /*fill all of left side row*/
+      grid-column: 1;
+    }
+    #findUs__grid--right {
+      grid-row: 1/3; /*fill all of right side row*/
+      grid-column: 2;
+    }
+
+/*---------------------------------------------------*/
 /*FOOTER STYLING*/
 footer {
   text-align: center;
@@ -141,5 +163,5 @@ footer {
   }
 
   #footer__grid--middle {
-    grid-row: 2;
+    grid-row: 2; /*center footer content*/
   }
