--- a/CS601_HW2_Jones/styles/style.css
+++ b/CS601_HW2_Jones/styles/style.css
@@ -74,12 +74,13 @@ h3 {
 }
 
 p {
-color: #d0bcb3;
-text-align: left;
+color: white;
+text-align: center;
 padding: 40px;/*adding padding so the left justified content is centered*/
-line-height: 30px; /*adding line height so it matches the li items above*/
+line-height: 30px;
 }
 
+/*LIST ITEM STYLING*/
 ul,li {
   list-style-type: none;
   text-align: left;
@@ -87,15 +88,6 @@ ul,li {
   padding: 5px;
   margin-left: 15px;
   margin-right: 15px;
-}
-
-.scratch {
-  line-height: 30px;
-}
-
-.hours{
-  text-align: center;
-  margin: 0 auto;
 }
 
 /*BUTTON STYLING*/
@@ -171,6 +163,10 @@ ul,li {
       grid-row: 1/3; /*fill all of right side row*/
       grid-column: 2;
     }
+    .hours{
+      text-align: center;
+      margin: 0 auto;
+    }
 
     /*---------------------------------------------------*/
     /*MENU STYLING*/
@@ -196,7 +192,7 @@ ul,li {
         grid-column: 3; /*positioning center column*/
       }
 
-      .menu__eat, .menu__drink {
+      .menu__eat, .menu__drink { /*These were H2 but because of the target they are now a links I am styling*/
         font-size: 60px;
         font-family:'Alegreya Sans';
         color:white;
@@ -243,7 +239,9 @@ ul,li {
         grid-column: 1/4; /*positioning center column*/
       }
 
-
+      .scratch {
+        line-height: 30px; /*adding line height so it matches the li items above it*/
+      }
 
       /*---------------------------------------------------*/
       /*SPOTLIGHT STYLING*/
