--- a/CS601_HW4_Jones/css/style.css
+++ b/CS601_HW4_Jones/css/style.css
@@ -1,6 +1,11 @@
+
+
+
 .form {
   background-color: #032f26;
   width: 50%;
+  margin: 20px; /*creates a little space around the whole content*/
+  padding: 20px;
 }
 
 .form__title {
@@ -8,17 +13,21 @@
   text-transform: uppercase;
 }
 
+.form__h2 {
+  color: #e7b5ac;
+  font-size: 20px;
+}
+
 label {
-  color: white;
-  color: #d0bcb3;
-  font-size: 18px;
-  padding-top: 5px; /*spacing the content*/
-  padding-bottom: 5px; /*spacing the content*/
+  padding-left: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   display: block;   /*This tells each label to go on a new line */
 }
 
 .input {
-  color: pink; /*Just the radio button and checkbox choices should be a different color*/
+  color: #f9e0db; /*Just the radio button and checkbox choices should be a different color*/
+  font-size: 16px; /*and a slightly smaller size*/
 }
 
 
