--- a/CS601_HW4_Jones/css/style.css
+++ b/CS601_HW4_Jones/css/style.css
@@ -1,6 +1,6 @@
 
 
-
+/*ENTIRE FORM*/
 .form {
   background-color: #032f26;
   width: 50%;
@@ -8,16 +8,25 @@
   padding: 20px;
 }
 
+/*EACH FORM SECTION*/
+.form__section {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+/*TITLE*/
 .form__title {
   color: #d0bcb3; /*heading color*/
   text-transform: uppercase;
 }
 
+/*HEADINGS*/
 .form__h2 {
   color: #e7b5ac;
   font-size: 20px;
 }
 
+/*ALL FORM LABELS*/
 label {
   padding-left: 10px;
   padding-top: 5px;
@@ -25,24 +34,23 @@ label {
   display: block;   /*This tells each label to go on a new line */
 }
 
+/*ONLY INPUT LABELS*/
 .input {
   color: #f9e0db; /*Just the radio button and checkbox choices should be a different color*/
   font-size: 16px; /*and a slightly smaller size*/
 }
 
-
-
-
-/*BUTTON STYLING*/
-button {
-	box-shadow:inset 0px 1px 0px 0px #1e6053;
-	background-color:#043f33;
+/*BUTTON*/
+.form__button {
+	box-shadow:inset 0px 1px 0px 0px #e7b5ac;
+	background-color: #f9e0db;
 	border-radius:5px;
 	cursor:pointer;
 	color:white;
 	font-size:15px;
   padding: 10px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #1e6053;
+	text-decoration: none;
+	text-shadow:0px 1px 0px  #e7b5ac;
   text-align: center;
+
 }
