--- a/CS601_HW4_Jones/css/style.css
+++ b/CS601_HW4_Jones/css/style.css
@@ -1,11 +1,25 @@
 
+body, html {
+  height: 100%;
+}
 
 /*ENTIRE FORM*/
+.form__container {
+  background-image: url("../img/creationDrink.jpeg");
+  min-height: 900px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
 .form {
   background-color: #032f26;
-  width: 50%;
+  width: 550px;
   margin: 20px; /*creates a little space around the whole content*/
   padding: 20px;
+  position: absolute;
+  left: 0;
 }
 
 /*EACH FORM SECTION*/
@@ -18,13 +32,13 @@
 .form__title {
   color: #d0bcb3; /*heading color*/
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 25px;
 }
 
 /*HEADINGS*/
 .form__h2 {
   color: #e7b5ac;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 /*ALL FORM LABELS*/
@@ -48,7 +62,7 @@ label {
 	border-radius:5px;
 	cursor:pointer;
 	color:white;
-	font-size:15px;
+	font-size:16px;
   padding: 10px;
 	text-decoration: none;
 	text-shadow:0px 1px 0px  #e7b5ac;
