--- a/styles/style.css
+++ b/styles/style.css
@@ -26,10 +26,11 @@
 #navbar__grid--menu{
   grid-column: 2; /*positioning centered*/
   grid-row: 2;
-  padding-top: 10px;
+  padding-top: 1em;
 }
 #navbar__grid--right { /*I thought about combining this with navbar__link but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 3; /*positioning on the right*/
+  grid-row: 2;
   padding: 15px;
   text-align: right;
 }
@@ -56,6 +57,10 @@
   height: 30px;
 }
 
+.img__newyears {
+  width: 200px;
+}
+
 /*---------------------------------------------------*/
 /*COMMON STYLES THROUGHOUT*/
 h1 {
@@ -79,6 +84,10 @@ h3 {
   text-transform: uppercase;
   text-align: left;
   margin-left: 25px;
+}
+
+h4 {
+  color: pink;
 }
 
 p {
@@ -321,32 +330,53 @@ footer {
     grid-row: 2; /*center footer content*/
   }
 
-
-/*---------------------------------------------------*/
-/*POPUP STYLING*/
-.popup {
-  position: fixed;
-  z-index: 12000;  /*telling popup to be in front of everything else*/
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  background-image: url(/images/newnewyear.png); /*pop up background image*/
-  background-repeat: no-repeat;
-  padding: 25px;
-  border: 6px solid #d0bcb3; /*pop up border*/
-  border-radius: 20px; /*round corners of border*/
-  background-size: 100% auto;
-  padding: 25px 35px 50px;
-  position: relative;
-  max-width: 570px;
-  width: 80%;
-  overflow: hidden!important;
-
-  display: inline-block;
-  text-align: right;
-  position: relative;
+  /*---------------------------------------------------*/
+  /*POPUP STYLING*/
+.overlay-bg {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height:100%;
+	width: 100%;
+	cursor: pointer;
+	z-index: 1000; /* high z-index */
+	background: #000; /* fallback */
+	background: rgba(0,0,0,0.75);
 }
+	.overlay-content {
+		display: none;
+		background-image: url(/images/newnewyear.png);
+    border: 6px solid #d0bcb3; /*pop up border*/
+    border-radius: 25px; /*round corners of border*/
+    background-size: 100% auto; /*this refers to the image size within the content*/
+		padding: 2% 2% 4% 0; /*custom padding to display content nicely*/
+		width: 40%; /*this refers to overall page for the popup to cover*/
+		position: absolute;
+		top: 15%;
+		left: 50%;
+		margin: 0 0 0 -20%; /* add negative left margin for half the width to center the div */
+		z-index: 10001;
+		border-radius: 4px;
+		box-shadow: 0 0 5px rgba(0,0,0,0.9);
+    text-align: right; /* the only content is actually the tickets button so this is positioning it*/
+	}
 
+	.close-btn {
+		cursor: pointer;
+		border: 1px solid #333;
+		padding: 2%;
+		background: #032f26;
+    box-shadow:inset 0px 1px 0px 0px #1e6053;
+    text-shadow:0px 1px 0px #1e6053;
+    color: white;
+    text-transform: uppercase;
+		border-radius: 4px;
+    text-align: right;
+	}
+	.close-btn:hover {
+		background:#043f33;
+	}
 
   /*PRINT STYLING IGNORED FOR SCREENS*/
   /*---------------------------------------------------*/
