--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   text-align: center;
   background-color:  #032f26;  /*#04372c;*/ /*set the background color*/
   width: 100%; /*make the nav full screen width*/
-  height: 125px;
+  height: 160px;
   margin: 0;
   display: grid; /*using css grid layout*/
   grid-template-columns: 1fr auto 1fr; /*create 3 columns with grid*/
@@ -21,17 +21,17 @@
 #navbar__grid--title { /*I thought about combining this with navbar__title but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 2; /*positioning centered*/
   grid-row: 1;
-  padding-top: 30px;
+
 }
 #navbar__grid--menu{
   grid-column: 2; /*positioning centered*/
   grid-row: 2;
-  padding-top: 1em;
+
 }
 #navbar__grid--right { /*I thought about combining this with navbar__link but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 3; /*positioning on the right*/
-  grid-row: 2;
-  padding: 15px;
+  grid-row: 1/3;
+
   text-align: right;
 }
 
@@ -41,7 +41,7 @@
   text-transform: uppercase;
   color: white;
   font-size: 40px;
-  font-family: 'Raleway';
+  font-family:'Poiret One';
 }
 /*This is navbar menu items*/
 .navbar__link {
@@ -58,7 +58,11 @@
 }
 
 .img__newyears {
-  width: 200px;
+  height: 150px;;
+}
+
+.img__logo {
+  width: 250px;
 }
 
 /*---------------------------------------------------*/
