--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 /*Site Wide*/
 * {
-  font-family: 'Alegreya Sans', sans-serif;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -31,7 +30,6 @@
 #navbar__grid--right { /*I thought about combining this with navbar__link but it seemed like keeping the grid seperate would be better for reusability?*/
   grid-column: 3; /*positioning on the right*/
   grid-row: 1/3;
-
   text-align: right;
 }
 
@@ -276,7 +274,7 @@ ul,li {
         text-align: center; /*intro full screen width*/
         display: grid; /*using css grid layout*/
         grid-template-columns: 1fr; /*create 3 column with grid*/
-        grid-template-rows: 1fr 1fr; /*create 4 rows*/
+        grid-template-rows: 1fr; /*create 1 rows*/
 
       }
 
@@ -303,6 +301,46 @@ ul,li {
       .scratch {
         line-height: 30px; /*adding line height so it matches the li items above it*/
       }
+
+      /*MENU PHOTO GALLERY STYLING*/
+      /*---------------------------------------------------*/
+      .eat__grid--gallery {
+        grid-template-columns: repeat(4,1fr); /*4 flexible columns*/
+        grid-template-rows: repeat(2, 1fr); /*2 flexible rows*/
+        background-color: #d0bcb3; /*image gallery background*/
+        display: grid;
+       }
+
+        .gallery__item--1 {
+          grid-row: 1;
+          grid-column: 1;}
+        .gallery__item--2 {
+          grid-row: 1;
+          grid-column: 2; }
+        .gallery__item--3 {
+          grid-row: 1;
+          grid-column: 3; }
+        .gallery__item--4 {
+          grid-row: 1;
+          grid-column: 4; }
+        .gallery__item--5 {
+          grid-row: 2;
+          grid-column: 1; }
+        .gallery__item--6 {
+          grid-row: 2;
+          grid-column: 2; }
+        .gallery__item--7 {
+          grid-row: 2;
+          grid-column: 3; }
+        .gallery__item--8 {
+          grid-row: 2;
+          grid-column: 4; }
+
+        .gallery__img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block; }
 
       /*---------------------------------------------------*/
       /*SPOTLIGHT STYLING*/
@@ -334,6 +372,46 @@ ul,li {
           grid-column: 3; /*positioning center column*/
         }
 
+        .locals__and__events {
+          margin: 0;
+          text-align: center; /*intro full screen width*/
+          display: grid; /*using css grid layout*/
+          grid-template-columns: 1fr 1fr; /*create 2 column with grid*/
+          grid-template-rows: 1fr 1fr 1fr 1fr; /*create 4 rows*/
+          }
+
+          #locals__and__events--1--left {
+            grid-row: 1;
+            grid-column: 1;
+          }
+          #locals__and__events--1--right {
+            grid-row: 1;
+            grid-column: 2;
+          }
+          #locals__and__events--2--left {
+            grid-row: 2;
+            grid-column: 1;
+          }
+          #locals__and__events--2--right {
+            grid-row: 2;
+            grid-column: 2;
+          }
+          #locals__and__events--3--left {
+            grid-row: 3;
+            grid-column: 1;
+          }
+          #locals__and__events--3--right {
+            grid-row: 3;
+            grid-column: 2;
+          }
+          #locals__and__events--4--left {
+            grid-row: 4;
+            grid-column: 1;
+          }
+          #locals__and__events--4--right {
+            grid-row: 4;
+            grid-column: 2;
+          }
 /*---------------------------------------------------*/
 /*FOOTER STYLING*/
 footer {
@@ -399,12 +477,8 @@ footer {
 		background:#043f33;
 	}
 
-
-
-
 /*NEWSLETTER STYLING*/
 /*---------------------------------------------------*/
-
 /*ENTIRE FORM*/
 .form__container {
   background-image: url("/images/cocktail.jpeg");
