--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,7 @@ h5 {
   font-size: 20px;
   padding-left: 3em;
   padding-right: 3em;
+  padding-bottom: 1em;
   text-align: left;
 }
 
@@ -127,6 +128,22 @@ text-transform: uppercase;
   font-size: 15px;
   font-family: "Poiret One";
   text-transform: uppercase;
+}
+
+#spotlight__link {
+  text-decoration: none;
+  color:#d0bcb3;;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Poiret One";
+  text-transform: uppercase;
+  border: 1px solid #d0bcb3;
+  padding: .5em;
+}
+
+#spotlight__link:hover {
+	background-color:#d0bcb3;
+  color: white;
 }
 
 /*LIST ITEM STYLING*/
