--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
 .navbar__link {
   text-decoration: none; /*get rid of default blue link underline*/
   text-transform: uppercase;
-  color: #d0bcb3; /*#B2A59F*/
+  color: #d0bcb3;
   font-size: 15px;
   padding: 15px;
 }
@@ -106,6 +106,7 @@ h5 {
   font-size: 20px;
   padding-left: 3em;
   padding-right: 3em;
+  line-height: 1.5em;
   text-align: left;
 }
 
@@ -199,21 +200,21 @@ ul,li {
 
 /*BUTTON STYLING*/
 .button {
-	box-shadow:inset 0px 1px 0px 0px #1e6053;
-	background-color:#032f26;
-	border-radius:5px;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: "Raleway";
-	font-size:15px;
-  padding: 10px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #1e6053;
-  align-items: center;
-  text-align: center;
+text-decoration: none;
+color:white;
+text-align: center;
+font-size: 20px;
+font-family: "Poiret One";
+text-transform: uppercase;
+background-color:#032f26;
+padding: .5em;
+text-shadow: white;
 }
+
 .button:hover {
-	background-color:#043f33;
+	background-color:#d0bcb3;
+  color: white;
+
 }
 .button:active {
 	position:relative;
