--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
 .navbar__link {
   text-decoration: none; /*get rid of default blue link underline*/
   text-transform: uppercase;
-  color: #d0bcb3;
+  color: #bba9a1;
   font-size: 15px;
   padding: 15px;
 }
@@ -91,7 +91,7 @@ h3 {
 }
 
 h4 {
-  color: #d0bcb3;
+  color: #bba9a1;
   font-family: "Poiret One";
   font-size: 30px;
   padding: 20px;
@@ -101,7 +101,7 @@ h4 {
 }
 
 h5 {
-  color: #d0bcb3;
+  color: #bba9a1;
   font-family: "Poiret One";
   font-size: 20px;
   padding-left: 3em;
@@ -111,7 +111,7 @@ h5 {
 }
 
 table, address {
-  color: #d0bcb3;
+  color: #bba9a1;
   font-family: "Poiret One";
   font-size: 20px;
   padding-left: 3em;
@@ -147,17 +147,17 @@ text-transform: uppercase;
 
 #spotlight__link, #jsonOnClick, #call__us { /*applying this style to three different ids on different pages*/
   text-decoration: none;
-  color:#d0bcb3;;
+  color:#bba9a1;
   text-align: center;
   font-size: 20px;
   font-family: "Poiret One";
   text-transform: uppercase;
-  border: 1px solid #d0bcb3;
+  border: 1px solid #bba9a1;
   padding: .5em;
 }
 
 #spotlight__link:hover, #jsonOnClick:hover, #call__us:hover { /*flip the colors on hover so user knows its a button*/
-	background-color:#d0bcb3;
+	background-color:#bba9a1
   color: white;
 }
 
@@ -169,7 +169,7 @@ text-transform: uppercase;
 ul,li {
   list-style-type: none;
   text-align: left;
-  color: #d0bcb3;
+  color: #bba9a1;
   padding: 5px;
   margin-left: 15px;
   margin-right: 15px;
@@ -212,7 +212,7 @@ text-shadow: white;
 }
 
 .button:hover {
-	background-color:#d0bcb3;
+	background-color:#bba9a1
   color: white;
 
 }
@@ -248,7 +248,7 @@ text-shadow: white;
   /*MUSIC STYLING*/
   /*this will hopefully change a lot once we introduce javascript and i can make custom controls*/
   .music {
-    border: 2px solid #d0bcb3;
+    border: 2px solid #bba9a1;
     border-radius: 33px;
     background-color: #f1f3f4;
     width: 300px;
@@ -337,7 +337,7 @@ text-shadow: white;
       .eat__grid--gallery {
         grid-template-columns: repeat(4,1fr); /*4 flexible columns*/
         grid-template-rows: repeat(2, 1fr); /*2 flexible rows*/
-        background-color: #d0bcb3; /*image gallery background*/
+        background-color: #bba9a1; /*image gallery background*/
         display: grid;
        }
 
@@ -496,7 +496,7 @@ footer {
 	.overlay-content {
 		display: none;
 		background-image: url(/images/newnewyear.png);
-    border: 6px solid #d0bcb3; /*pop up border*/
+    border: 6px solid #bba9a1; /*pop up border*/
     border-radius: 25px; /*round corners of border*/
     background-size: 100% auto; /*this refers to the image size within the content*/
 		padding: 2% 2% 4% 0; /*custom padding to display content nicely*/
@@ -556,7 +556,7 @@ footer {
 
 /*TITLE*/
 .form__title {
-  color: #d0bcb3; /*heading color*/
+  color: #bba9a1 /*heading color*/
   text-transform: uppercase;
   font-size: 25px;
 }
